# telegram-chatbot-service

./: .gitignore  Dockerfile  README.md  docker-compose-dev.yaml  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: helpers.py  main.py
app/bot/: bot.py
app/server/: __init__.py  api.py
src/: main.py
src/bot/: __init__.py  bot.py
src/modules/bot/: __init__.py  telegram.py
src/modules/bot/models/: chat_message.py
src/modules/bot/telegram/: chat.py  chatbot.py  constants.py
src/modules/bot/telegram/models/: chat_message.py
src/modules/server/: __init__.py  api.py
src/modules/server/controllers/: __init__.py  send.py
src/modules/server/middlewares/: api_key_middleware.py
src/server/: __init__.py  api.py  auth.py
src/server/controllers/: __init__.py  send.py
tests/: send.http
