[project]
name = "telegram-chatbot-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.13",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "redis>=3.5.3",
    "slowapi[redis]>=0.1.9",
    "uvicorn>=0.34.3",
]
